# APS-resources

./: README.md
APS/: .gitignore  20251209_포인터 심화과정.pptx  양식01_프로그램_참석자_명단.hwp
APS/Forensics/: 002.md  003_법이론.md  004_시험개요.md  005_디지털포렌식_용어.md  006_절차_및_무결성_유지.md  007_MBR_분석.md  008_[실습]쓰기방지.md  009_[실습]autopsytool.md  010_[실습]파티션복구.md  012_정보확인법.md  059_NTFS파티션의BR복구.md  060_Bitlocker.md  061_네트워크정보.md  062_VHD_Veracrypt.md  063_Memory분석기초.md  066_Jumplist.md  067_Prefetch.md  068_Timeline.md  069_Torrent.md  071_exFAT.md  073_NetworkUsageView_ThumbCacheViewer_HashCalc.md  074_GPT.md  076_복합파일의_내부구조확인.md
APS/NEWS/: 보안뉴스 양식.hwpx
APS/NEWS/auto_news/: aps.html  prompt.md
APS/NEWS/보안뉴스002/: 보안뉴스2.hwpx
APS/NEWS/보안뉴스008/: 보안뉴스8.hwpx
APS/NEWS/보안뉴스010/: 보안뉴스10.hwpx
APS/NEWS/보안뉴스011/: 보안뉴스11.hwpx
APS/NEWS/보안뉴스012/: 보안뉴스12.hwpx
APS/NEWS/보안뉴스013/: 보안뉴스013.md  보안뉴스12.hwpx
APS/NEWS/보안뉴스014/: 보안뉴스014.md  보안뉴스14.hwpx
APS/NEWS/보안뉴스015/: 보안뉴스015.md  보안뉴스15.hwpx
APS/NEWS/보안뉴스016/: 보안뉴스016.md  보안뉴스16.hwpx
APS/NEWS/보안뉴스017/: 보안뉴스017.md  보안뉴스17.hwpx
APS/NEWS/보안뉴스018/: 보안뉴스018.md  보안뉴스18.hwpx
APS/NEWS/보안뉴스019/: 보안뉴스019.md  보안뉴스19.hwpx
APS/NEWS/보안뉴스020/: 보안뉴스020.md  보안뉴스20.hwpx
APS/NEWS/보안뉴스021/: 보안뉴스021.html
APS/NEWS/보안뉴스022/: 보안뉴스022.html
APS/NEWS/보안뉴스023/: 보안뉴스023.html
APS/NEWS/보안뉴스024/: 보안뉴스024.html
APS/NEWS/보안뉴스025/: 보안뉴스025.html
APS/NEWS/보안뉴스026/: 보안뉴스026.html
APS/컴퓨터_시스템의_이해/: 001_요점정리.md
APS/포렌식/: 001.md  002.md
APS/해킹시연/: CMakeLists.txt  README.md  build.sh  toolchain-mingw.cmake
APS/해킹시연/src/: main.cpp
(+89 files in other folders)
